--- a/scss/partials/core/_mixins.scss
+++ b/scss/partials/core/_mixins.scss
@@ -1,3 +1,7 @@
 /*
 	*  "_mixins.scss" : This is the most important file as it contains all the mixins and functions.
 */
+
+.selector {
+  color: red;
+}
