--- a/css/main.css
+++ b/css/main.css
@@ -469,6 +469,10 @@ div:empty {
 /*
 	*  "_mixins.scss" : This is the most important file as it contains all the mixins and functions.
 */
+.selector {
+  color: red;
+}
+
 /*
 	*  "_global-variables.scss" : This file contains all the global variables.
 */
