--- a/docs/design/draft/custom/scss/main.scss
+++ b/docs/design/draft/custom/scss/main.scss
@@ -9,7 +9,7 @@
 // @import './partials/default-stylesheets/normalize-css/_normalize--modern';
 // @import './partials/default-stylesheets/normalize-css/_normalize--sanitize';
 // @import './partials/default-stylesheets/normalize-css/_normalize--sanitize-opinionated';
-@import './partials/default-stylesheets/normalize-css/_normalize--reboot';
+@import './partials/default-stylesheets/normalize-css/_normalize--reboot.scss';
 
 // -  Variant B: <reset-css>
 // @import './partials/default-stylesheets/reset-css/_reset--default';
@@ -20,28 +20,28 @@
 	+  Partial SCSS Group 2 : <default-tags>
 */
 
-@import './partials/default-stylesheets/custom-css/_custom-css--default';
+@import './partials/default-stylesheets/custom-css/_custom-css--default.scss';
 
 /*
 	+  Partial SCSS Group 3 : <core>
 */
 
-@import './partials/core/_mixins';
-@import './partials/core/_global-variables';
-@import './partials/core/_colors';
-@import './partials/core/_fonts';
-@import './partials/core/_typography';
-@import './partials/core/_animations';
-@import './partials/core/_media-queries';
+@import './partials/core/_mixins.scss';
+@import './partials/core/_global-variables.scss';
+@import './partials/core/_colors.scss';
+@import './partials/core/_fonts.scss';
+@import './partials/core/_typography.scss';
+@import './partials/core/_animations.scss';
+@import './partials/core/_media-queries.scss';
 
 /*
 	+  Partial SCSS Group 4 : <components>
 */
 
-@import './partials/components/_header';
-@import './partials/components/_hero';
-@import './partials/components/_section-name--1';
-@import './partials/components/_section-name--2';
-@import './partials/components/_section-name--3';
-@import './partials/components/_section-name--4';
-@import './partials/components/_footer';
+@import './partials/components/_header.scss';
+@import './partials/components/_aside.scss';
+@import './partials/components/_section__1--hero.scss';
+@import './partials/components/_section__2.scss';
+@import './partials/components/_section__3.scss';
+@import './partials/components/_section__4.scss';
+@import './partials/components/_footer.scss';
