--- a/assets/styles/scss-updated/base/_reboot.scss
+++ b/assets/styles/scss-updated/base/_reboot.scss
@@ -1,5 +1,5 @@
 /*
-	*  "_normalize--reboot.scss" | v5.0.0-beta3 | MIT License | https://github.com/twbs/bootstrap/blob/main/dist/css/bootstrap-reboot.css
+	*  "_reboot.scss" | v5.0.0-beta3 | MIT License | https://github.com/twbs/bootstrap/blob/main/dist/css/bootstrap-reboot.css
 */
 
 *,
