style-main: assets folder v7

--- a/assets/styles/scss-updated/base/_reboot.scss
+++ b/assets/styles/scss-updated/base/_reboot.scss
@@ -1,6 +1,6 @@
-/*
-	*  "_reboot.scss" | v5.0.0-beta3 | MIT License | https://github.com/twbs/bootstrap/blob/main/dist/css/bootstrap-reboot.css
-*/
+/*----------------------------------------------------------------------------*\
+// *  _reboot.scss: This partial file contains the custom 'reboot'.
+\*----------------------------------------------------------------------------*/
 
 *,
 *::before,
