--- a/assets/styles/scss-updated/themes/_light.scss
+++ b/assets/styles/scss-updated/themes/_light.scss
@@ -1,4 +1,3 @@
-// -----------------------------------------------------------------------------
-// When having several themes, this file contains everything related to the
-// default one.
-// -----------------------------------------------------------------------------
+/*----------------------------------------------------------------------------*\
+// *  _light.scss: This partial file contains the 'light' theme.
+\*----------------------------------------------------------------------------*/
