--- a/assets/styles/scss-updated/abstracts/_functions.scss
+++ b/assets/styles/scss-updated/abstracts/_functions.scss
@@ -1,3 +1,3 @@
 /*----------------------------------------------------------------------------*\
-// *  This file contains all application-wide Sass functions.
+// *  _functions.scss: This partial file contains all Scss 'functions'.
 \*----------------------------------------------------------------------------*/
