--- a/assets/styles/scss-updated/abstracts/_mixins.scss
+++ b/assets/styles/scss-updated/abstracts/_mixins.scss
@@ -1,3 +1,3 @@
 /*----------------------------------------------------------------------------*\
-// *  This file contains all application-wide Sass mixins.
+// *  _mixins.scss: This partial file contains all Scss 'mixins'.
 \*----------------------------------------------------------------------------*/
