--- a/assets/styles/scss-updated/abstracts/_utilities.scss
+++ b/assets/styles/scss-updated/abstracts/_utilities.scss
@@ -1,3 +1,3 @@
 /*----------------------------------------------------------------------------*\
-// *  This file contains all application-wide Sass utilities.
+// *  _utilities.scss: This partial file contains all Scss 'utilities'.
 \*----------------------------------------------------------------------------*/
