--- a/assets/styles/scss-updated/abstracts/_variables.scss
+++ b/assets/styles/scss-updated/abstracts/_variables.scss
@@ -1,3 +1,3 @@
 /*----------------------------------------------------------------------------*\
-// *  This file contains all application-wide Sass variables.
+// *  _variables.scss: This partial file contains all Scss 'variables'.
 \*----------------------------------------------------------------------------*/
