--- a/assets/styles/scss-updated/layout/_footer.scss
+++ b/assets/styles/scss-updated/layout/_footer.scss
@@ -1,3 +1,3 @@
-// -----------------------------------------------------------------------------
-// This file contains all styles related to the footer of the site/application.
-// -----------------------------------------------------------------------------
+/*----------------------------------------------------------------------------*\
+// *  _footer.scss: This partial file contains all 'footer' styles.
+\*----------------------------------------------------------------------------*/
