--- a/assets/styles/scss-updated/layout/_header.scss
+++ b/assets/styles/scss-updated/layout/_header.scss
@@ -1,3 +1,3 @@
-// -----------------------------------------------------------------------------
-// This file contains all styles related to the header of the site/application.
-// -----------------------------------------------------------------------------
+/*----------------------------------------------------------------------------*\
+// *  _header.scss: This partial file contains all 'header' styles.
+\*----------------------------------------------------------------------------*/
