--- a/assets/styles/scss-updated/pages/_home.scss
+++ b/assets/styles/scss-updated/pages/_home.scss
@@ -1,3 +1,3 @@
 /*----------------------------------------------------------------------------*\
-// *  _home.scss: This partial file contains styles that are specific to the 'home' page.
+// *  _home.scss: This partial file contains the styles of the 'home' page.
 \*----------------------------------------------------------------------------*/
