--- a/assets/styles/scss-updated/pages/_index.scss
+++ b/assets/styles/scss-updated/pages/_index.scss
@@ -1,3 +1,3 @@
 /*----------------------------------------------------------------------------*\
-// *  _index.scss: This partial file contains styles that are specific to the 'index' page.
+// *  _index.scss: This partial file contains the styles of the 'index' page.
 \*----------------------------------------------------------------------------*/
