--- a/assets/styles/scss-updated/pages/_login.scss
+++ b/assets/styles/scss-updated/pages/_login.scss
@@ -1,3 +1,3 @@
 /*----------------------------------------------------------------------------*\
-// *  _login.scss: This partial file contains styles that are specific to the 'login' page.
+// *  _login.scss: This partial file contains the styles of the 'login' page.
 \*----------------------------------------------------------------------------*/
