--- a/assets/styles/scss-updated/pages/_profile.scss
+++ b/assets/styles/scss-updated/pages/_profile.scss
@@ -1,3 +1,3 @@
 /*----------------------------------------------------------------------------*\
-// *  _profile.scss: This partial file contains styles that are specific to the 'profile' page.
+// *  _profile.scss: This partial file contains the styles of the 'profile' page.
 \*----------------------------------------------------------------------------*/
