style-main: assets folder v17

--- a/assets/styles/scss-updated/base/_reset-fix.scss
+++ b/assets/styles/scss-updated/base/_reset-fix.scss
@@ -1,3 +1,10 @@
 /*----------------------------------------------------------------------------*\
-// *  This partial file contains the `custom-normalize` HTML tags
+// *  This partial file contains the `reset-fix` HTML tags
 \*----------------------------------------------------------------------------*/
+
+body {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0 auto;
+}
