--- a/assets/styles/scss-updated/base/_reset.scss
+++ b/assets/styles/scss-updated/base/_reset.scss
@@ -1,10 +1,5 @@
 /*----------------------------------------------------------------------------*\
-// *  This partial file contains the `reset-fix` HTML tags
+// *  This partial file contains the custom `reset` HTML tags
 \*----------------------------------------------------------------------------*/
 
-body {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0 auto;
-}
+// See '../vendors/reboot';
