style-main: assets folder v19

--- a/assets/styles/scss-updated/main.scss
+++ b/assets/styles/scss-updated/main.scss
@@ -10,6 +10,7 @@
 @import 'abstracts/functions';
 @import 'abstracts/mixins';
 @import 'abstracts/utilities';
+@import 'abstracts/animations';
 
 /*----------------------------------------------------------------------------*\
 // +  Partial SCSS Group 2 - `vendors/`
