style-main: assets folder v19b

--- a/assets/styles/scss-updated/main.scss
+++ b/assets/styles/scss-updated/main.scss
@@ -37,7 +37,7 @@
 // +  Partial SCSS Group 5 - `components/`
 \*----------------------------------------------------------------------------*/
 /*----------------------------------------------------------------------------*\
-// *  Partial SCSS Group 5.1 - `single-part/`
+// *  Partial SCSS Group 5.1 - `components/single-part/`
 \*----------------------------------------------------------------------------*/
 @import 'components/single-part/block';
 @import 'components/single-part/box';
@@ -53,7 +53,7 @@
 @import 'components/single-part/title';
 
 /*----------------------------------------------------------------------------*\
-// *  Partial SCSS Group 5.2 - `forms/`
+// *  Partial SCSS Group 5.2 - `components/forms/`
 \*----------------------------------------------------------------------------*/
 @import 'components/forms/general';
 @import 'components/forms/input';
@@ -64,7 +64,7 @@
 @import 'components/forms/file';
 
 /*----------------------------------------------------------------------------*\
-// *  Partial SCSS Group 5.3 - `multi-part/`
+// *  Partial SCSS Group 5.3 - `components/multi-part/`
 \*----------------------------------------------------------------------------*/
 @import 'components/multi-part/breadcrumb';
 @import 'components/multi-part/card';
