--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1,9 +1,27 @@
-/*
-	+  Partial SCSS Group 1 : <Reset>
-*/
-/*
-	*  "_normalize--reboot.scss" | v5.0.0-beta2 | MIT License | https://github.com/twbs/bootstrap/blob/main/dist/css/bootstrap-reboot.css
-*/
+/*----------------------------------------------------------------------------*\
+// +  Partial SCSS Group 1 - `abstracts/`
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _variables.scss: This partial file contains all Scss 'variables'.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _functions.scss: This partial file contains all Scss 'functions'.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _mixins.scss: This partial file contains all Scss 'mixins'.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _utilities.scss: This partial file contains all Scss 'utilities'.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _animations.scss: This partial file contains all Scss 'animations'.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// +  Partial SCSS Group 2 - `vendors/`
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _reboot.scss: This partial file contains the bootstrap 'reboot'.
+\*----------------------------------------------------------------------------*/
 *,
 *::before,
 *::after {
@@ -19,7 +37,7 @@
 
 body {
   margin: 0;
-  font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -27,10 +45,6 @@ body {
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-[tabindex='-1']:focus:not(:focus-visible) {
-  outline: 0 !important;
 }
 
 hr {
@@ -112,7 +126,6 @@ p {
 
 abbr[title],
 abbr[data-bs-original-title] {
-  text-decoration: underline;
   -webkit-text-decoration: underline dotted;
   text-decoration: underline dotted;
   cursor: help;
@@ -207,7 +220,7 @@ pre,
 code,
 kbd,
 samp {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+  font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
   font-size: 1em;
   direction: ltr;
   unicode-bidi: bidi-override;
@@ -324,6 +337,10 @@ select {
   word-wrap: normal;
 }
 
+select:disabled {
+  opacity: 1;
+}
+
 [list]::-webkit-calendar-picker-indicator {
   display: none;
 }
@@ -397,13 +414,13 @@ legend + * {
 }
 
 /* rtl:raw:
- [type="tel"],
- [type="url"],
- [type="email"],
- [type="number"] {
-	 direction: ltr;
- }
- */
+[type="tel"],
+[type="url"],
+[type="email"],
+[type="number"] {
+  direction: ltr;
+}
+*/
 ::-webkit-search-decoration {
   -webkit-appearance: none;
 }
@@ -442,69 +459,181 @@ progress {
   display: none !important;
 }
 
+/*----------------------------------------------------------------------------*\
+// +  Partial SCSS Group 3 - `base/`
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  This partial file contains the custom `reset` HTML tags
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  This partial file contains all application-wide 'typography'.
+\*----------------------------------------------------------------------------*/
 /*
-	+  Partial SCSS Group 2 : <default-tags>
+  #  Headings
 */
 /*
-	*  "_custom-css--default.scss" | v1.0.0 | GNU License | https://github.com/
+  #  Inline text elements
 */
 /*
-	-  Additional <default-stylesheets> tweaks
-	-  <==========================================================================>
-*/
-body {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0 auto;
-}
-
-/*
-	+  Partial SCSS Group 3 : <core>
+  #  Abbreviations
 */
 /*
-	*  "_mixins.scss" : This is the most important file as it contains all the mixins and functions.
+  #  Blockquotes
 */
 /*
-	*  "_global-variables.scss" : This file contains all the global variables.
+  #  Lists
 */
 /*
-	*  "_colors.scss" : This scss files contains all the project design color codes and schemes.
+  # Responsive font sizes
 */
-/*
-	*  "_fonts.scss" : This file contains all the fonts imports and with the help of @fontface rule we create custom font families.
-*/
-/*
-	*  "_typography.scss" : This file contains all the font styles.
-*/
-/*
-	*  "_animations.scss" : This file contains all the animations and transitions.
-*/
-/*
-	*  "_media-queries.scss" : This is the second most important file as it contains all the responsive media queries
-*/
-/*
-	+  Partial SCSS Group 4 : <components>
-*/
-/*
-	*  "_header.scss" : This file contains the header
-*/
-/*
-	*  "_aside.scss" : This file contains <aside> tag content
-*/
-/*
-	*  "_hero.scss" : This file contains the hero
-*/
-/*
-	*  "_section-name--1.scss" : This file contains the section-name--1
-*/
-/*
-	*  "_section-name--2.scss" : This file contains the section-name--2
-*/
-/*
-	*  "_section-name--3.scss" : This file contains the section-name--3
-*/
-/*
-	*  "_footer.scss" : This file contains the footer
-*/
+/*----------------------------------------------------------------------------*\
+// +  Partial SCSS Group 4 - `layout/`
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _header.scss: This partial file contains all 'header' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _nav.scss: This partial file contains all 'nav' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _aside.scss: This partial file contains all 'aside' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _section.scss: This partial file contains all 'section' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _article.scss: This partial file contains all 'article' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _footer.scss: This partial file contains all 'footer' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// +  Partial SCSS Group 5 - `components/`
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  Partial SCSS Group 5.1 - `components/single-part/`
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _block.scss: This partial file contains all 'block' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _box.scss: This partial file contains all 'box' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _button.scss: This partial file contains all 'button' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _content.scss: This partial file contains all 'content' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _delete.scss: This partial file contains all 'delete' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _icon.scss: This partial file contains all 'icon' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _image.scss: This partial file contains all 'image' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _notification.scss: This partial file contains all 'notification' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _progress-bars.scss: This partial file contains all 'progress-bars' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _table.scss: This partial file contains all 'table' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _tag.scss: This partial file contains all 'tag' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _title.scss: This partial file contains all 'title' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  Partial SCSS Group 5.2 - `components/forms/`
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _general.scss: This partial file contains all 'general' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _input.scss: This partial file contains all 'input' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _textarea.scss: This partial file contains all 'textarea' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _select.scss: This partial file contains all 'select' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _checkbox.scss: This partial file contains all 'checkbox' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _radio.scss: This partial file contains all 'radio' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _file.scss: This partial file contains all 'file' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  Partial SCSS Group 5.3 - `components/multi-part/`
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _breadcrumb.scss: This partial file contains all 'breadcrumb' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _card.scss: This partial file contains all 'card' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _dropdown.scss: This partial file contains all 'dropdown' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _menu.scss: This partial file contains all 'menu' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _message.scss: This partial file contains all 'message' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _modal.scss: This partial file contains all 'modal' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _navbar.scss: This partial file contains all 'navbar' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _pagination.scss: This partial file contains all 'pagination' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _panel.scss: This partial file contains all 'panel' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _tabs.scss: This partial file contains all 'tabs' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// +  Partial SCSS Group 6 - `pages/`
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _index.scss: This partial file contains the styles of the 'index' page.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _home.scss: This partial file contains the styles of the 'home' page.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _login.scss: This partial file contains the styles of the 'login' page.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _profile.scss: This partial file contains the styles of the 'profile' page.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _storefront.scss: This partial file contains the styles of the 'storefront' page.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// +  Partial SCSS Group 7 - `themes/`
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _light.scss: This partial file contains the 'light' theme.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _dark.scss: This partial file contains the 'dark' theme.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _midnight.scss: This partial file contains the 'midnight' theme.
+\*----------------------------------------------------------------------------*/
 /*# sourceMappingURL=main.css.map */
