--- a/assets/styles/scss/pages/_storefront.scss
+++ b/assets/styles/scss/pages/_storefront.scss
@@ -1,3 +1,3 @@
 /*----------------------------------------------------------------------------*\
-// *  _storefront.scss: This partial file contains the style of the 'storefront' page.
+// *  _storefront.scss: This partial file contains the styles of the 'storefront' page.
 \*----------------------------------------------------------------------------*/
