style-main: config update v7

--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -22,6 +22,7 @@
 /*----------------------------------------------------------------------------*\
 // *  _reboot.scss: This partial file contains the bootstrap 'reboot'.
 \*----------------------------------------------------------------------------*/
+@import url("https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css");
 *,
 *::before,
 *::after {
@@ -460,11 +461,22 @@ progress {
 }
 
 /*----------------------------------------------------------------------------*\
+// *  _bulma.scss: This partial file contains the 'bulma' theme.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
 // +  Partial SCSS Group 3 - `base/`
 \*----------------------------------------------------------------------------*/
 /*----------------------------------------------------------------------------*\
 // *  This partial file contains the custom `reset` HTML tags
 \*----------------------------------------------------------------------------*/
+columns {
+  background-color: blue;
+}
+
+column {
+  background-color: red;
+}
+
 /*----------------------------------------------------------------------------*\
 // *  This partial file contains all application-wide 'typography'.
 \*----------------------------------------------------------------------------*/
@@ -622,7 +634,7 @@ progress {
 // *  _profile.scss: This partial file contains the styles of the 'profile' page.
 \*----------------------------------------------------------------------------*/
 /*----------------------------------------------------------------------------*\
-// *  _storefront.scss: This partial file contains the styles of the 'storefront' page.
+// *  _storefront.scss: This partial file contains the'storefront' page styles.
 \*----------------------------------------------------------------------------*/
 /*----------------------------------------------------------------------------*\
 // +  Partial SCSS Group 7 - `themes/`
