--- a/assets/styles/scss/base/_reset.scss
+++ b/assets/styles/scss/base/_reset.scss
@@ -3,3 +3,11 @@
 \*----------------------------------------------------------------------------*/
 
 // See '../vendors/reboot';
+
+columns {
+  background-color: blue;
+}
+
+column {
+  background-color: red;
+}
