--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -16,6 +16,7 @@
 // +  Partial SCSS Group 2 - `vendors/`
 \*----------------------------------------------------------------------------*/
 @import 'vendors/reboot';
+@import 'vendors/bulma';
 
 /*----------------------------------------------------------------------------*\
 // +  Partial SCSS Group 3 - `base/`
