--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -474,7 +474,7 @@ columns {
 }
 
 column {
-  background-color: red;
+  background-color: green;
 }
 
 /*----------------------------------------------------------------------------*\
