--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -1,3 +1,6 @@
 /*----------------------------------------------------------------------------*\
 // *  _variables.scss: This partial file contains all Scss 'variables'.
 \*----------------------------------------------------------------------------*/
+
+$font-style-normal: normal;
+$font-style-italic: italic;
