STYLE-MAIN: themes a1

--- a/assets/styles/scss/themes/_dark.scss
+++ b/assets/styles/scss/themes/_dark.scss
@@ -1,3 +1,12 @@
 /*----------------------------------------------------------------------------*\
 // *  _dark.scss: This partial file contains the 'dark' theme.
 \*----------------------------------------------------------------------------*/
+
+:root,
+[data-theme='dark'] {
+  --primary-color: #9a97f3;
+  --secondary-color: #818cab;
+  --font-color: #e1e1ff;
+  --bg-color: #161625;
+  --heading-color: #818cab;
+}
