--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -13,11 +13,6 @@
 /*----------------------------------------------------------------------------*\
 // *  _utilities.scss: This partial file contains all Scss 'utilities'.
 \*----------------------------------------------------------------------------*/
-@import url("https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css");
-.test {
-  color: red;
-}
-
 /*----------------------------------------------------------------------------*\
 // *  _animations.scss: This partial file contains all Scss 'animations'.
 \*----------------------------------------------------------------------------*/
@@ -27,6 +22,7 @@
 /*----------------------------------------------------------------------------*\
 // *  _reboot.scss: This partial file contains the bootstrap 'reboot'.
 \*----------------------------------------------------------------------------*/
+@import url("https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css");
 *,
 *::before,
 *::after {
@@ -42,7 +38,7 @@
 
 body {
   margin: 0;
-  font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -225,7 +221,7 @@ pre,
 code,
 kbd,
 samp {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+  font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
   font-size: 1em;
   direction: ltr;
   unicode-bidi: bidi-override;
@@ -473,14 +469,6 @@ progress {
 /*----------------------------------------------------------------------------*\
 // *  This partial file contains the custom `reset` HTML tags
 \*----------------------------------------------------------------------------*/
-columns {
-  background-color: blue;
-}
-
-column {
-  background-color: green;
-}
-
 /*----------------------------------------------------------------------------*\
 // *  This partial file contains all application-wide 'typography'.
 \*----------------------------------------------------------------------------*/
@@ -646,10 +634,24 @@ column {
 /*----------------------------------------------------------------------------*\
 // *  _light.scss: This partial file contains the 'light' theme.
 \*----------------------------------------------------------------------------*/
+:root,
+[data-theme='light'] {
+  --foreground-color: hsl(0, 3%, 6%);
+  --background-color: hsl(240, 100%, 99%);
+  --primary-color: hsl(207, 48%, 14%);
+  --secondary-color: hsl(214, 42%, 64%);
+  --accent-color: hsl(50, 100%, 50%);
+}
+
 /*----------------------------------------------------------------------------*\
 // *  _dark.scss: This partial file contains the 'dark' theme.
 \*----------------------------------------------------------------------------*/
-/*----------------------------------------------------------------------------*\
-// *  _midnight.scss: This partial file contains the 'midnight' theme.
-\*----------------------------------------------------------------------------*/
+:root,
+[data-theme='dark'] {
+  --primary-color: #9a97f3;
+  --secondary-color: #818cab;
+  --font-color: #e1e1ff;
+  --bg-color: #161625;
+  --heading-color: #818cab;
+}
 /*# sourceMappingURL=main.css.map */
