--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -9,6 +9,7 @@
 @import 'abstracts/variables';
 @import 'abstracts/functions';
 @import 'abstracts/mixins';
+@import 'abstracts/breakpoints';
 @import 'abstracts/utilities';
 @import 'abstracts/animations';
 
