style-main: footer v2

--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -23,8 +23,6 @@
 /*----------------------------------------------------------------------------*\
 // *  _reboot.scss: This partial file contains the bootstrap 'reboot'.
 \*----------------------------------------------------------------------------*/
-@import url("https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css");
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
 *,
 *::before,
 *::after {
@@ -463,9 +461,6 @@ progress {
 }
 
 /*----------------------------------------------------------------------------*\
-// *  _bulma.scss: This partial file contains the 'bulma' theme.
-\*----------------------------------------------------------------------------*/
-/*----------------------------------------------------------------------------*\
 // +  Partial SCSS Group 3 - `base/`
 \*----------------------------------------------------------------------------*/
 /*----------------------------------------------------------------------------*\
@@ -497,9 +492,6 @@ progress {
 \*----------------------------------------------------------------------------*/
 /*----------------------------------------------------------------------------*\
 // *  _header.scss: This partial file contains all 'header' styles.
-\*----------------------------------------------------------------------------*/
-/*----------------------------------------------------------------------------*\
-// *  _nav.scss: This partial file contains all 'nav' styles.
 \*----------------------------------------------------------------------------*/
 .topnav {
   overflow: hidden;
@@ -572,6 +564,12 @@ progress {
 }
 
 /*----------------------------------------------------------------------------*\
+// *  _nav.scss: This partial file contains all 'nav' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
+// *  _main.scss: This partial file contains all 'main' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
 // *  _aside.scss: This partial file contains all 'aside' styles.
 \*----------------------------------------------------------------------------*/
 /*----------------------------------------------------------------------------*\
@@ -581,23 +579,11 @@ progress {
 // *  _article.scss: This partial file contains all 'article' styles.
 \*----------------------------------------------------------------------------*/
 /*----------------------------------------------------------------------------*\
+// *  _address.scss: This partial file contains all 'address' styles.
+\*----------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------*\
 // *  _footer.scss: This partial file contains all 'footer' styles.
 \*----------------------------------------------------------------------------*/
-* {
-  font-family: Roboto;
-}
-
-section {
-  width: 100%;
-  display: inline-block;
-  background: #ccc;
-  height: 60vh;
-  text-align: center;
-  font-size: 22px;
-  font-weight: 700;
-  text-decoration: underline;
-}
-
 .footer-distributed {
   background-color: #292c2f;
   -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
@@ -671,8 +657,8 @@ section {
 }
 
 .footer-distributed .footer-right a:hover {
-  transform: scale(1.1);
   -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .footer-distributed p.footer-links a:hover {
