--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -17,7 +17,7 @@
 // +  Partial SCSS Group 2 - `vendors/`
 \*----------------------------------------------------------------------------*/
 @import 'vendors/reboot';
-@import 'vendors/bulma';
+// @import 'vendors/bulma';
 
 /*----------------------------------------------------------------------------*\
 // +  Partial SCSS Group 3 - `base/`
@@ -30,9 +30,11 @@
 \*----------------------------------------------------------------------------*/
 @import 'layout/header';
 @import 'layout/nav';
+@import 'layout/main';
 @import 'layout/aside';
 @import 'layout/section';
 @import 'layout/article';
+@import 'layout/address';
 @import 'layout/footer';
 
 /*----------------------------------------------------------------------------*\
