--- a/assets/styles/scss/layout/_address.scss
+++ b/assets/styles/scss/layout/_address.scss
@@ -1,3 +1,3 @@
 /*----------------------------------------------------------------------------*\
-// *  _nav.scss: This partial file contains all 'nav' styles.
+// *  _address.scss: This partial file contains all 'address' styles.
 \*----------------------------------------------------------------------------*/
