style-main: footer v4

--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -544,7 +544,7 @@ progress {
   background: #ccc;
 }
 
-@media screen and (max-width: 600px) {
+@media (max-width: 45rem) {
   .topnav .search-container {
     float: none;
   }
@@ -584,7 +584,7 @@ progress {
 /*----------------------------------------------------------------------------*\
 // *  _footer.scss: This partial file contains all 'footer' styles.
 \*----------------------------------------------------------------------------*/
-.footer-distributed {
+.footer {
   background-color: #292c2f;
   -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
           box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
@@ -596,14 +596,14 @@ progress {
   padding: 45px 50px;
 }
 
-.footer-distributed .footer-left p {
+.footer .footer-left p {
   color: #8f9296;
   font-size: 14px;
   margin: 0;
 }
 
 /* Footer links */
-.footer-distributed p.footer-links {
+.footer p.footer-links {
   font-size: 18px;
   font-weight: bold;
   color: #ffffff;
@@ -613,7 +613,7 @@ progress {
   transition: ease 0.25s;
 }
 
-.footer-distributed p.footer-links a {
+.footer p.footer-links a {
   display: inline-block;
   line-height: 1.8;
   text-decoration: none;
@@ -622,7 +622,7 @@ progress {
   transition: ease 0.25s;
 }
 
-.footer-distributed .footer-links a:before {
+.footer .footer-links a:before {
   content: '·';
   font-size: 20px;
   left: 0;
@@ -631,17 +631,17 @@ progress {
   padding-right: 5px;
 }
 
-.footer-distributed .footer-links .link-1:before {
+.footer .footer-links .link-1:before {
   content: none;
 }
 
-.footer-distributed .footer-right {
+.footer .footer-right {
   float: right;
   margin-top: 6px;
   max-width: 180px;
 }
 
-.footer-distributed .footer-right a {
+.footer .footer-right a {
   display: inline-block;
   width: 35px;
   height: 35px;
@@ -656,26 +656,26 @@ progress {
   transition: all 0.25s;
 }
 
-.footer-distributed .footer-right a:hover {
+.footer .footer-right a:hover {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
 
-.footer-distributed p.footer-links a:hover {
+.footer p.footer-links a:hover {
   text-decoration: underline;
 }
 
 /* Media Queries */
-@media (max-width: 600px) {
-  .footer-distributed .footer-left,
-  .footer-distributed .footer-right {
+@media (max-width: 45rem) {
+  .footer .footer-left,
+  .footer .footer-right {
     text-align: center;
   }
-  .footer-distributed .footer-right {
+  .footer .footer-right {
     float: none;
     margin: 0 auto 20px;
   }
-  .footer-distributed .footer-left p.footer-links {
+  .footer .footer-left p.footer-links {
     line-height: 1.8;
   }
 }
