--- a/assets/styles/scss/layout/_header.scss
+++ b/assets/styles/scss/layout/_header.scss
@@ -53,7 +53,7 @@
   background: #ccc;
 }
 
-@media screen and (max-width: 600px) {
+@include breakpoint(sm) {
   .topnav .search-container {
     float: none;
   }
