--- a/assets/styles/scss/abstracts/_breakpoints.scss
+++ b/assets/styles/scss/abstracts/_breakpoints.scss
@@ -1,43 +1,43 @@
 @mixin breakpoint($breakpoint) {
-  // #  Extra Small - 30em
+  // #  Extra Small - 30em - 480px
   @if $breakpoint == xsm {
-    @media (max-width: 480px) {
+    @media (max-width: $breakpoint-xsm) {
       @content;
     }
   }
-  // #  Small - 45em
+  // #  Small - 45em - 720px
   @if $breakpoint == sm {
-    @media (max-width: 720px) {
+    @media (max-width: $breakpoint-sm) {
       @content;
     }
   }
-  // #  Medium - 60em
+  // #  Medium - 60em - 960px
   @else if $breakpoint == md {
-    @media (min-width: 960px) {
+    @media (max-width: $breakpoint-md) {
       @content;
     }
   }
-  // #  Large - 75em
+  // #  Large - 75em - 1200px
   @else if $breakpoint == lg {
-    @media (min-width: 1200px) {
+    @media (max-width: $breakpoint-lg) {
       @content;
     }
   }
-  // #  Extra Large - 90em
+  // #  Extra Large - 90em - 1440px
   @else if $breakpoint == xl {
-    @media (min-width: 1440px) {
+    @media (max-width: $breakpoint-xl) {
       @content;
     }
   }
-  // #  Extra Large - 105em
+  // #  Extra Large - 105em - 1680px
   @else if $breakpoint == xxl {
-    @media (min-width: 1680px) {
+    @media (max-width: $breakpoint-xxl) {
       @content;
     }
   }
-  // #  Extra Extra Extra Large - 120em
+  // #  Extra Extra Extra Large - 120em - 1920px
   @else if $breakpoint == xxxl {
-    @media (min-width: 1920px) {
+    @media (max-width: $breakpoint-xxxl) {
       @content;
     }
   } @else {
