--- a/assets/styles/scss/layout/_footer.scss
+++ b/assets/styles/scss/layout/_footer.scss
@@ -2,7 +2,7 @@
 // *  _footer.scss: This partial file contains all 'footer' styles.
 \*----------------------------------------------------------------------------*/
 
-.footer-distributed {
+.footer {
   background-color: #292c2f;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
@@ -12,14 +12,14 @@
   padding: 45px 50px;
 }
 
-.footer-distributed .footer-left p {
+.footer .footer-left p {
   color: #8f9296;
   font-size: 14px;
   margin: 0;
 }
 /* Footer links */
 
-.footer-distributed p.footer-links {
+.footer p.footer-links {
   font-size: 18px;
   font-weight: bold;
   color: #ffffff;
@@ -28,7 +28,7 @@
   transition: ease 0.25s;
 }
 
-.footer-distributed p.footer-links a {
+.footer p.footer-links a {
   display: inline-block;
   line-height: 1.8;
   text-decoration: none;
@@ -36,7 +36,7 @@
   transition: ease 0.25s;
 }
 
-.footer-distributed .footer-links a:before {
+.footer .footer-links a:before {
   content: '·';
   font-size: 20px;
   left: 0;
@@ -45,17 +45,17 @@
   padding-right: 5px;
 }
 
-.footer-distributed .footer-links .link-1:before {
+.footer .footer-links .link-1:before {
   content: none;
 }
 
-.footer-distributed .footer-right {
+.footer .footer-right {
   float: right;
   margin-top: 6px;
   max-width: 180px;
 }
 
-.footer-distributed .footer-right a {
+.footer .footer-right a {
   display: inline-block;
   width: 35px;
   height: 35px;
@@ -69,26 +69,25 @@
   transition: all 0.25s;
 }
 
-.footer-distributed .footer-right a:hover {
+.footer .footer-right a:hover {
   transform: scale(1.1);
 }
 
-.footer-distributed p.footer-links a:hover {
+.footer p.footer-links a:hover {
   text-decoration: underline;
 }
 
 /* Media Queries */
-
-@media (max-width: 600px) {
-  .footer-distributed .footer-left,
-  .footer-distributed .footer-right {
+@include breakpoint(sm) {
+  .footer .footer-left,
+  .footer .footer-right {
     text-align: center;
   }
-  .footer-distributed .footer-right {
+  .footer .footer-right {
     float: none;
     margin: 0 auto 20px;
   }
-  .footer-distributed .footer-left p.footer-links {
+  .footer .footer-left p.footer-links {
     line-height: 1.8;
   }
 }
