--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -15,11 +15,22 @@ $size-2XL: 2rem; // 32px
 $size-3XL: 3rem; // 48px
 $size-4XL: 4rem; // 64px
 
-// # <=======| Breakpoints |=======>
-$breakpoint-xsm: 30rem; // 480px
-$breakpoint-sm: 45rem; // 720px
-$breakpoint-md: 60rem; // 960px
-$breakpoint-lg: 75rem; // 1200px
-$breakpoint-xl: 90rem; // 1440px
-$breakpoint-xxl: 105rem; // 1680px
-$breakpoint-xxxl: 120rem; // 1920px
+// # <=======| dimensions |=======>
+$dimension-xxsm: 20rem; // 320px
+$dimension-xsm: 40rem; // 640px
+$dimension-sm: 60rem; // 960px
+$dimension-md: 80rem; // 1280px
+$dimension-lg: 100rem; // 1600px
+$dimension-xl: 120rem; // 1920px
+$dimension-xxl: 140rem; // 2240px
+
+// # <=======| Other sizes |=======>
+
+$max-width: $dimension-xxl;
+
+
+a
+d
+dfdf
+qsdfq
+sdfqdsf
