--- a/assets/styles/scss/layout/_footer.scss
+++ b/assets/styles/scss/layout/_footer.scss
@@ -1,15 +1,15 @@
-/*----------------------------------------------------------------------------*\
+/* -------------------------------------------------------------------------- *\
 // *  _footer.scss: This partial file contains all 'footer' styles.
-\*----------------------------------------------------------------------------*/
+\* -------------------------------------------------------------------------- */
 
 .footer {
   background-color: #292c2f;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
-  width: 100%;
-  text-align: left;
   font: normal 16px sans-serif;
   padding: 45px 50px;
+  text-align: left;
+  width: 100%;
 }
 
 .footer .footer-left p {
@@ -17,35 +17,36 @@
   font-size: 14px;
   margin: 0;
 }
+
 /* Footer links */
 
 .footer p.footer-links {
+  color: #fff;
   font-size: 18px;
   font-weight: bold;
-  color: #ffffff;
   margin: 0 0 10px;
   padding: 0;
   transition: ease 0.25s;
 }
 
 .footer p.footer-links a {
+  color: inherit;
   display: inline-block;
   line-height: 1.8;
   text-decoration: none;
-  color: inherit;
   transition: ease 0.25s;
 }
 
-.footer .footer-links a:before {
+.footer .footer-links a::before {
+  color: #fff;
   content: '·';
+  display: inline-block;
   font-size: 20px;
   left: 0;
-  color: #fff;
-  display: inline-block;
   padding-right: 5px;
 }
 
-.footer .footer-links .link-1:before {
+.footer .footer-links .link-1::before {
   content: none;
 }
 
@@ -56,17 +57,17 @@
 }
 
 .footer .footer-right a {
-  display: inline-block;
-  width: 35px;
-  height: 35px;
   background-color: #33383b;
   border-radius: 2px;
+  color: #fff;
+  display: inline-block;
   font-size: 20px;
-  color: #ffffff;
-  text-align: center;
+  height: 35px;
   line-height: 35px;
   margin-left: 3px;
+  text-align: center;
   transition: all 0.25s;
+  width: 35px;
 }
 
 .footer .footer-right a:hover {
@@ -83,10 +84,12 @@
   .footer .footer-right {
     text-align: center;
   }
+
   .footer .footer-right {
     float: none;
     margin: 0 auto 20px;
   }
+
   .footer .footer-left p.footer-links {
     line-height: 1.8;
   }
