--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -1,6 +1,6 @@
-/* -------------------------------------------------------------------------- *\
+// -----------------------------------------------------------------------------
 // *  _variables.scss: This partial file contains all Scss 'variables'.
-\* -------------------------------------------------------------------------- */
+// -----------------------------------------------------------------------------
 
 // # <=======| Font-weight |=======>
 $font-weight-text: 400; // Normal
