--- a/assets/styles/scss/abstracts/_animations.scss
+++ b/assets/styles/scss/abstracts/_animations.scss
@@ -1,3 +1,3 @@
-/*----------------------------------------------------------------------------*\
+// -----------------------------------------------------------------------------
 // *  _animations.scss: This partial file contains all Scss 'animations'.
-\*----------------------------------------------------------------------------*/
+// -----------------------------------------------------------------------------
