--- a/assets/styles/scss/abstracts/_utilities.scss
+++ b/assets/styles/scss/abstracts/_utilities.scss
@@ -1,3 +1,3 @@
-/*----------------------------------------------------------------------------*\
+// -----------------------------------------------------------------------------
 // *  _utilities.scss: This partial file contains all Scss 'utilities'.
-\*----------------------------------------------------------------------------*/
+// -----------------------------------------------------------------------------
